mario_namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: super-mario
  labels:
    app: super-mario
