mario_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: super-mario
  namespace: super-mario
  labels:
    app: super-mario
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: super-mario
